[metadata]
name = hobohm
version = 1.0.2
author = Anders Gorm Pedersen
author_email = agpe@dtu.dk
description = Select representative, non-redundant data set from larger set, based on list of pairwise similarities (or distances).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agormp/hobohm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
py_modules = hobohm
python_requires = >=3.6

[options.entry_points]
console_scripts =
    treedist = hobohm:main