[metadata]
name = hobohm
version = 1.1.0
author = Anders Gorm Pedersen
author_email = agpe@dtu.dk
description = Select representative subset of data, based on list of pairwise similarities (or distances) between items, 
			  such that no retained items are close neighbors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agormp/hobohm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
py_modules = hobohm
python_requires = >=3.6

[options.entry_points]
console_scripts =
    hobohm = hobohm:main