[metadata]
name = hobohm
version = 2.0.0
author = Anders Gorm Pedersen
author_email = agpe@dtu.dk
description = Select non-redundant subset of DNA or protein-sequences, such that all pairwise sequence identities
			  are below threshold.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agormp/hobohm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
py_modules = hobohm
python_requires = >=3.6
install_requires =
	pandas

[options.entry_points]
console_scripts =
    hobohm = hobohm:main